--- a/LandmarkBookk/LandmarkBookk/Base.lproj/Main.storyboard
+++ b/LandmarkBookk/LandmarkBookk/Base.lproj/Main.storyboard
@@ -1,24 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2Ye-qj-nsN">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LandmarkBookk" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="BPW-a9-v24">
+                                <rect key="frame" x="0.0" y="91" width="375" height="687"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BPW-a9-v24" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="CXo-hF-rHq"/>
+                            <constraint firstItem="BPW-a9-v24" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JFm-hT-vnt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BPW-a9-v24" secondAttribute="trailing" id="X1z-NE-vGW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="BPW-a9-v24" secondAttribute="bottom" id="a10-p3-Z0e"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="r7b-yj-vdB"/>
+                    <connections>
+                        <outlet property="tableView" destination="BPW-a9-v24" id="raW-77-I1v"/>
+                        <segue destination="rMH-N3-lOD" kind="show" identifier="toDetailsVC" id="Rnb-ku-qku"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137" y="-27"/>
+        </scene>
+        <!--DetailsVC-->
+        <scene sceneID="lLd-fF-IOU">
+            <objects>
+                <viewController id="rMH-N3-lOD" customClass="DetailsVC" customModule="LandmarkBookk" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uHu-Bs-2Uw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="u37-s7-cxd">
+                                <rect key="frame" x="51" y="254" width="291" height="174"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="291" id="1fj-IO-kAa"/>
+                                    <constraint firstAttribute="height" constant="174" id="6HC-Nd-m4M"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="LandmarkName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="het-jS-rqJ">
+                                <rect key="frame" x="51" y="131" width="272" height="70"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="zVF-c7-NEd"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="u37-s7-cxd" firstAttribute="top" secondItem="het-jS-rqJ" secondAttribute="bottom" constant="53" id="1Ng-Co-kcp"/>
+                            <constraint firstItem="het-jS-rqJ" firstAttribute="leading" secondItem="zVF-c7-NEd" secondAttribute="leading" constant="51" id="BrI-QI-jZd"/>
+                            <constraint firstItem="het-jS-rqJ" firstAttribute="leading" secondItem="u37-s7-cxd" secondAttribute="leading" id="V8O-L2-y2Z"/>
+                            <constraint firstItem="het-jS-rqJ" firstAttribute="top" secondItem="zVF-c7-NEd" secondAttribute="top" constant="40" id="Yqx-Rm-iJW"/>
+                            <constraint firstItem="het-jS-rqJ" firstAttribute="centerX" secondItem="uHu-Bs-2Uw" secondAttribute="centerX" id="jm6-dC-Ey7"/>
+                            <constraint firstItem="zVF-c7-NEd" firstAttribute="bottom" secondItem="u37-s7-cxd" secondAttribute="bottom" constant="350" id="v2e-aY-BIA"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="b6V-VP-JlQ"/>
+                    <connections>
+                        <outlet property="imageView" destination="u37-s7-cxd" id="EiE-BK-APk"/>
+                        <outlet property="landmarkLabel" destination="het-jS-rqJ" id="Ie0-Ws-ACW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0yj-u9-aGr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1327" y="-27"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="LZP-gJ-S7K">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2Ye-qj-nsN" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="unN-kP-SsX">
+                        <rect key="frame" x="0.0" y="47" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ZlI-jh-k9O"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yMg-de-rW1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-446" y="-27"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
