--- a/ArtBookkProject/ArtBookkProject/Base.lproj/Main.storyboard
+++ b/ArtBookkProject/ArtBookkProject/Base.lproj/Main.storyboard
@@ -1,24 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PaS-vc-5cN">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ArtBookkProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0v6-ly-cii">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0v6-ly-cii" secondAttribute="trailing" id="9gD-Qt-HhW"/>
+                            <constraint firstItem="0v6-ly-cii" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GpR-xt-Daw"/>
+                            <constraint firstItem="0v6-ly-cii" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="vMY-Be-95h"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0v6-ly-cii" secondAttribute="bottom" id="ztG-1Q-xPp"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="zqc-Cp-F23"/>
+                    <connections>
+                        <outlet property="tableView" destination="0v6-ly-cii" id="szC-XW-OZU"/>
+                        <segue destination="Szv-cK-TbM" kind="show" identifier="toDetailsVC" id="o7t-Hc-dKb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="662" y="-2"/>
+        </scene>
+        <!--DetailsVC-->
+        <scene sceneID="6aO-RO-5BW">
+            <objects>
+                <viewController id="Szv-cK-TbM" customClass="DetailsVC" customModule="ArtBookkProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jrQ-O9-gJw">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="select.png" translatesAutoresizingMaskIntoConstraints="NO" id="dIM-dW-f9V">
+                                <rect key="frame" x="76" y="141" width="243" height="249"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="243" id="Ee3-Ps-tsj"/>
+                                    <constraint firstAttribute="height" constant="249" id="eRH-1Z-8iA"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0f4-Lk-NwD">
+                                <rect key="frame" x="60" y="436" width="259" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="artist" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tz3-RD-ieD">
+                                <rect key="frame" x="60" y="498" width="259" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="year" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bPH-gF-dAh">
+                                <rect key="frame" x="60" y="556" width="259" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTh-aS-BAo">
+                                <rect key="frame" x="137" y="625" width="61" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="72" id="pbp-qw-4zH"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Save"/>
+                                <connections>
+                                    <action selector="saveButtonClicked:" destination="Szv-cK-TbM" eventType="touchUpInside" id="jmw-M7-bR9"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Pe4-Ix-gpy"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="0f4-Lk-NwD" firstAttribute="top" secondItem="dIM-dW-f9V" secondAttribute="bottom" constant="46" id="0UY-Ok-Hvn"/>
+                            <constraint firstItem="dIM-dW-f9V" firstAttribute="centerX" secondItem="jrQ-O9-gJw" secondAttribute="centerX" constant="1" id="4C2-Ur-9Cv"/>
+                            <constraint firstItem="bPH-gF-dAh" firstAttribute="centerX" secondItem="hTh-aS-BAo" secondAttribute="centerX" constant="22" id="AVy-IK-J6z"/>
+                            <constraint firstItem="0f4-Lk-NwD" firstAttribute="leading" secondItem="Pe4-Ix-gpy" secondAttribute="leading" constant="60" id="KZ2-AQ-3cF"/>
+                            <constraint firstItem="dIM-dW-f9V" firstAttribute="leading" secondItem="Pe4-Ix-gpy" secondAttribute="leading" constant="76" id="NvN-Vv-SI3"/>
+                            <constraint firstItem="tz3-RD-ieD" firstAttribute="top" secondItem="0f4-Lk-NwD" secondAttribute="bottom" constant="28" id="O8m-Zu-BAZ"/>
+                            <constraint firstItem="dIM-dW-f9V" firstAttribute="top" secondItem="Pe4-Ix-gpy" secondAttribute="top" constant="38" id="OPm-08-qPC"/>
+                            <constraint firstItem="0f4-Lk-NwD" firstAttribute="trailing" secondItem="tz3-RD-ieD" secondAttribute="trailing" id="RCT-ah-zQI"/>
+                            <constraint firstItem="tz3-RD-ieD" firstAttribute="leading" secondItem="bPH-gF-dAh" secondAttribute="leading" id="Rcc-pR-DTF"/>
+                            <constraint firstItem="hTh-aS-BAo" firstAttribute="top" secondItem="bPH-gF-dAh" secondAttribute="bottom" constant="35" id="bI2-hl-rTJ"/>
+                            <constraint firstItem="bPH-gF-dAh" firstAttribute="top" secondItem="tz3-RD-ieD" secondAttribute="bottom" constant="24" id="hHy-ma-g3v"/>
+                            <constraint firstItem="tz3-RD-ieD" firstAttribute="trailing" secondItem="bPH-gF-dAh" secondAttribute="trailing" id="lPA-fw-glH"/>
+                            <constraint firstItem="hTh-aS-BAo" firstAttribute="leading" secondItem="Pe4-Ix-gpy" secondAttribute="leading" constant="137" id="lTD-1y-KXi"/>
+                            <constraint firstItem="dIM-dW-f9V" firstAttribute="centerX" secondItem="0f4-Lk-NwD" secondAttribute="centerX" constant="8" id="lfL-sn-Jeh"/>
+                            <constraint firstItem="0f4-Lk-NwD" firstAttribute="leading" secondItem="tz3-RD-ieD" secondAttribute="leading" id="pzO-dF-8sE"/>
+                            <constraint firstItem="Pe4-Ix-gpy" firstAttribute="bottom" secondItem="hTh-aS-BAo" secondAttribute="bottom" constant="121" id="xYw-NV-NRI"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="H6E-Iw-6Ok"/>
+                    <connections>
+                        <outlet property="artistText" destination="tz3-RD-ieD" id="sfh-7N-3se"/>
+                        <outlet property="imageView" destination="dIM-dW-f9V" id="1iR-BZ-lFY"/>
+                        <outlet property="nameText" destination="0f4-Lk-NwD" id="mzc-QW-Y7x"/>
+                        <outlet property="saveButton" destination="hTh-aS-BAo" id="iWQ-EW-w1G"/>
+                        <outlet property="yearText" destination="bPH-gF-dAh" id="OII-hH-oTi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zmd-x4-weM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1575" y="-2"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9Dp-b2-K4N">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PaS-vc-5cN" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Y2h-XF-v9U">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="sp5-LT-IE2"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bBg-9Y-3Tf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-132" y="-2"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="select.png" width="264" height="300"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
